<resources>
    <string name="app_name">CrimPi</string>
    <string name="crimpi_connect">Please connect to a CrimPi device</string>
    <string name="bluetooth_scan">Bluetooth Scan</string>
    <string name="crimpi_logo">CrimPi Logo</string>
    <string name="n_a">N/A</string>
    <string name="scan_failed">Scan failed: </string>
    <string name="try_again">. Please try again.</string>
    <string name="bluetooth_not_supported">Bluetooth is not supported on this device.</string>
    <string name="bluetooth_not_enabled">Bluetooth is not enabled. Please enable it."</string>
    <string name="bluetooth_permissions_denied">Bluetooth permissions denied. Cannot scan.</string>
    <string name="bluetooth_disabled">Bluetooth is disabled.</string>
    <string name="scanner_not_available">Scanner not available.</string>
    <string name="permissions_not_granted">Permissions not granted.</string>
    <string name="connection_attempt">Attempting to connect to %s</string>
    <string name="connection_attempt_permission_error">Attempting to connect to device (permission error displaying name)</string>
    <string name="units">units</string>
    <string name="disconnect_dialog_title">Disconnect?</string>
    <string name="disconnect_dialog_message">Are you sure you want to disconnect from the device?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="home">Home</string>
    <string name="workouts">Workouts</string>
    <string name="freestyle_workout">Freestyle workout</string>
    <string name="my_workouts">My workouts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="start_workout">Start Workout</string>
    <string name="connected_to_a_crimpi_device">Connected to a CrimPi device!</string>
    <string name="not_connected_to_a_crimpi_device_please_connect">Not connected to a CrimPi device. Please connect.</string>
    <string name="countdown_start">3</string>
    <string name="stop_workout">Stop Workout</string>
    <string name="set_target">Set Target</string>
    <string name="kg">kg</string>
    <string name="location_permissions_not_granted">Location permissions not granted</string>
    <string name="select_a_crimpi_device">Select a CrimPi Device</string>
    <string name="no_crimpi_devices_found">No CrimPi devices found. Make sure the device is on and discoverable.</string>
    <string name="device_logo">Device Logo</string>
    <string name="crimpi_device_name">CrimPi Device Name</string>
    <string name="disconnected_from_device">Workout stopped! Disconnected from device.</string>
    <string name="go">GO!</string>
    <string name="enter_current_body_weight">Enter current body weight</string>
    <string name="body_weight_hint">Body weight\n</string>
    <string name="cancel">Cancel</string>
    <string name="enter">Enter\n</string>
    <string name="please_enter_body_weight">Please enter body weight</string>
    <string name="body_weight_must_be_positive">Body weight must be positive</string>
    <string name="body_weight_saved">Body weight saved!</string>
    <string name="invalid_body_weight_format">Invalid weight format</string>
    <string name="body_weight_button_desc">Body weight dialog button</string>
    <string name="timer_icon_desc">Timer icon</string>
    <string name="zero">0</string>
    <string name="add_workout">Add workout</string>
    <string name="x">X</string>
    <string name="reps">Reps</string>
    <string name="body_percentage">Body %</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="create_new_workout">Create New Workout</string>
    <string name="name">Name</string>
    <string name="description_optional">Description (optional)</string>
    <string name="add">Add</string>
    <string name="add_exercise">Add exercise</string>
    <string name="delete_workout">Delete Workout</string>
    <string name="are_you_sure_you_want_to_delete_this_workout">Are you sure you want to delete this workout?</string>
    <string name="workout_name">Workout Name</string>
    <string name="status">Status</string>
    <string name="secondary_status">Secondary Status</string>
    <string name="timer">Timer</string>
    <string name="exercisetimer">exerciseTimer</string>
    <string name="resttimer">restTimer</string>
    <string name="workout_completed">Workout Completed!</string>
    <string name="workout_started">Workout Started!</string>
    <string name="rest_between_sets">Rest between sets (seconds)</string>
    <string name="rest_between_repetitions">Rest between repetitions (seconds)</string>
    <string name="error_no_workout_data_loaded">Error: No workout data loaded.</string>
    <string name="repetition_duration">Repetition duration</string>
</resources>