<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_dialog_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp">

    <!-- Title/Instruction Text -->
    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="16dp"
        android:text="@string/enter_current_body_weight"
        android:textColor="@color/primary_text_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Body Weight Input Field -->
    <EditText
        android:id="@+id/bodyWeightEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/purple_200"
        android:hint="@string/body_weight_hint"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:textColor="@color/primary_text_color"
        android:textColorHint="@color/text_light_gray" /> <!-- Assuming you have a custom_cursor_color drawable -->

    <!-- Buttons Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal"> <!-- Align buttons to the end (right) -->

        <Button
            android:id="@+id/cancelButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel"
            android:textColor="@color/primary_text_color" />

        <Button
            android:id="@+id/enterButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:textColor="@color/primary_text_color" />

    </LinearLayout>

</LinearLayout>
