<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="24dp"
    android:paddingBottom="16dp"
    android:background="@drawable/rounded_dialog_background">

    <!-- Title -->
    <TextView
        android:id="@+id/dialogDeleteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_workout"
        android:textColor="@color/primary_text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="start"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:layout_marginBottom="8dp" />

    <!-- Separator Line -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/purple_200"
        android:layout_marginBottom="16dp" />

    <!-- Message -->
    <TextView
        android:id="@+id/dialogDeleteTitleMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_delete_this_workout"
        android:textColor="@color/primary_text_color"
        android:textSize="16sp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:layout_marginBottom="24dp" /> <!-- Added bottom margin for spacing -->

    <!-- Buttons Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <Button
            android:id="@+id/dialogDeleteTitleButtonNo"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textColor="@color/accent_blue_light"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/dialogDeleteTitleButtonYes"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textColor="@color/accent_blue_light" />

    </LinearLayout>

</LinearLayout>
